# spam-classifier-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml  model.fst
.github/: CODEOWNERS
.github/workflows/: check.yml  wasm-build-release.yml
benches/: classifier.rs
src/: classifier.rs  lib.rs
src/helpers/: body.rs  extensions.rs  mod.rs
