[package]
name = "spam-classifier-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "train"
required-features = ["training"]

[[bench]]
name = "classifier"
harness = false

[dependencies]
anyhow = "1.0.86"
bytes = "1.10.1"
fst = "0.4.7"
http = "1.3.1"
wit-bindgen = "0.43.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unobtanium-segmenter = "0.2.1"
csv = { version = "1.3.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
criterion = { version = "0.7", features = ["html_reports"] }

[features]
training = ["dep:csv"]
